--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "inlamningsuppgift_2",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --no-timeouts"
   },
   "keywords": [],
   "author": "",
@@ -25,5 +24,6 @@
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
     "supertest": "^6.3.3"
-  }
+  },
+  "description": ""
 }
