--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "inlamningsuppgift_2",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -25,5 +24,6 @@
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
     "supertest": "^6.3.3"
-  }
+  },
+  "description": ""
 }
